# logging-after-jump

./: Cargo.toml  README.md  app.map  backtrac  memory.x
.cargo/: config.toml
citadel/: .citadelrc
citadel/app/: Cargo.toml  app.map  memory.x
citadel/app/src/: lib.rs
citadel/jump/: Cargo.toml  memory.x
citadel/jump/src/: lib.rs
src/: lib.rs
