[package]
edition = "2021"
name = "jump"
publish = false
version = "0.1.0"

[dependencies]
defmt = "0.3"
defmt-rtt = "0.4"
heapless = "0.7.11"
spin = "0.9.3"
usb-device = { version = "0.2.9", features = ["defmt"] }
static_assertions = "1.1.0"
cortex-m = "0.7.5"
cortex-m-semihosting = "0.5.0"

[dependencies.ed25519-dalek]
default-features = false
version = "2.1.1"

[dependencies.hmac]
default-features = false
version = "0.11.0"

[dependencies.panic-probe]
features = ["print-defmt"]
version = "0.3.0"

[dependencies.sha2]
default-features = false
version = "0.9"

[dev-dependencies]
const-decoder = "0.2.0"
defmt-test = "0.3.0"

[lib]
harness = false

[profile]
[profile.dev]
debug = 2
opt-level = 1
panic = "abort"

[profile.test]
debug = 2
opt-level = "s"

[profile.release]
debug = true
opt-level = "s"
panic = "abort"

[dependencies.stm32f4xx-hal]
version = "0.21.0"
features = ["stm32f411"]